--- a/freeshelf/templates/base.html
+++ b/freeshelf/templates/base.html
@@ -4,11 +4,14 @@
   {% block title %}<title>Free Bookshelf</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
+<header> 
+        <div class="cf" style="background: url(https://images.unsplash.com/photo-1559566709-5fc85ef5349c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80) no-repeat center center fixed; background-size: cover;">
+</header>
 <body>
   <div class="container-fluid">
     <div class="row">
@@ -18,6 +21,16 @@
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="">All books</a></li>
           <li><a href="">All authors</a></li>
+          <div class=“catnav”>
+                {% block catnav %}
+                <ul>
+                    <li class=“booksby”>Books by category:</li>
+                    {% for category in list_of_categories %}
+                    <li><a href='{{ category.get_absolute_url }}'>{{ category.name }}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endblock %}
+            </div>
         </ul>
      {% endblock %}
       </div>
